--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                 <div class="form-group">
                     <label for="vin">车辆VIN码</label>
                     <div class="input-wrapper">
-                        <input type="text" id="vin" placeholder="请输入17位VIN码" value="LUZAGAGA7NA037621"
+                        <input type="text" id="vin" placeholder="请输入17位VIN码" value=""
                             aria-describedby="vin-error" required>
                         <div class="error-message" id="vin-error">VIN码格式不正确（需17位大写字母数字组合）</div>
                     </div>
