--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                     </button>
 
                 </div>
-                <div class="button-group">
+                <!-- <div class="button-group">
 
                     <button class="btn" id="copy-all-monthly" style="display: none;">
                         <i class="fas fa-copy"></i> 复制整月密码
@@ -570,7 +570,7 @@
                     <button class="btn" id="copy-all-monthly-adb" style="display: none;">
                         <i class="fas fa-copy"></i> 复制整月ADB命令
                     </button>
-                </div>
+                </div> -->
                 <div id="monthly-results">
                     <div id="monthly-results-list"></div>
                 </div>
