--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>车辆安全密码生成器</title>
     <meta name="description" content="基于VIN和日期生成车辆安全密码的工具">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </head>
 
@@ -110,7 +110,7 @@
         <i class="fas fa-check-circle toast-icon"></i>
         <span id="toast-message">密码已复制到剪贴板</span>
     </div>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
 
 </body>
 
